Merge caseScope 7.1.1 into main